Revert List.of() to Arrays.asList() for cases with null elements or mutable operations
Co-authored-by: kthoms <265597+kthoms@users.noreply.github.com>