@@ -17,6 +17,7 @@
 package org.operaton.bpm.engine.rest;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -197,7 +198,7 @@ public class EventSubscriptionRestServiceQueryTest extends AbstractRestServiceTe
 
   @Test
   void testWithoutTenantIdParameter() {
-    mockedEventSubscriptionQuery = setUpMockEventSubscriptionQuery(List.of(MockProvider.createMockEventSubscription(null)));
+    mockedEventSubscriptionQuery = setUpMockEventSubscriptionQuery(Arrays.asList(MockProvider.createMockEventSubscription(null)));
 
     Response response =
         given()
@@ -320,7 +321,7 @@ public class EventSubscriptionRestServiceQueryTest extends AbstractRestServiceTe
   }
 
   private List<EventSubscription> createMockEventSubscriptionTwoTenants() {
-    return List.of(
+    return Arrays.asList(
         MockProvider.createMockEventSubscription(MockProvider.EXAMPLE_TENANT_ID),
         MockProvider.createMockEventSubscription(MockProvider.ANOTHER_EXAMPLE_TENANT_ID)
       );
