@@ -16,6 +16,7 @@
  */
 package org.operaton.bpm.engine.rest;
 
+import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -190,7 +191,7 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
   @Test
   void testFetchAndLock() {
     // given
-    when(fetchTopicBuilder.execute()).thenReturn(List.of(lockedExternalTaskMock));
+    when(fetchTopicBuilder.execute()).thenReturn(Arrays.asList(lockedExternalTaskMock));
 
     // when
     Map<String, Object> parameters = new HashMap<>();
@@ -201,8 +202,8 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
     Map<String, Object> topicParameter = new HashMap<>();
     topicParameter.put("topicName", "aTopicName");
     topicParameter.put("lockDuration", 12354L);
-    topicParameter.put("variables", List.of(EXAMPLE_VARIABLE_INSTANCE_NAME));
-    parameters.put("topics", List.of(topicParameter));
+    topicParameter.put("variables", Arrays.asList(EXAMPLE_VARIABLE_INSTANCE_NAME));
+    parameters.put("topics", Arrays.asList(topicParameter));
 
     executePost(parameters);
 
@@ -216,7 +217,7 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
     inOrder.verify(fetchAndLockBuilder).subscribe();
 
     inOrder.verify(fetchTopicBuilder).topic("aTopicName", 12354L);
-    inOrder.verify(fetchTopicBuilder).variables(List.of(EXAMPLE_VARIABLE_INSTANCE_NAME));
+    inOrder.verify(fetchTopicBuilder).variables(Arrays.asList(EXAMPLE_VARIABLE_INSTANCE_NAME));
     inOrder.verify(fetchTopicBuilder).execute();
 
     verifyNoMoreInteractions(fetchTopicBuilder, fetchTopicBuilder, externalTaskService);
@@ -225,7 +226,7 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
   @Test
   void testFetchAndLockWithBusinessKey() {
     // given
-    when(fetchTopicBuilder.execute()).thenReturn(List.of(lockedExternalTaskMock));
+    when(fetchTopicBuilder.execute()).thenReturn(Arrays.asList(lockedExternalTaskMock));
 
     // when
     Map<String, Object> parameters = new HashMap<>();
@@ -237,8 +238,8 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
     topicParameter.put("topicName", "aTopicName");
     topicParameter.put("businessKey", EXAMPLE_BUSINESS_KEY);
     topicParameter.put("lockDuration", 12354L);
-    topicParameter.put("variables", List.of(EXAMPLE_VARIABLE_INSTANCE_NAME));
-    parameters.put("topics", List.of(topicParameter));
+    topicParameter.put("variables", Arrays.asList(EXAMPLE_VARIABLE_INSTANCE_NAME));
+    parameters.put("topics", Arrays.asList(topicParameter));
 
     executePost(parameters);
 
@@ -253,7 +254,7 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
 
     inOrder.verify(fetchTopicBuilder).topic("aTopicName", 12354L);
     inOrder.verify(fetchTopicBuilder).businessKey(EXAMPLE_BUSINESS_KEY);
-    inOrder.verify(fetchTopicBuilder).variables(List.of(EXAMPLE_VARIABLE_INSTANCE_NAME));
+    inOrder.verify(fetchTopicBuilder).variables(Arrays.asList(EXAMPLE_VARIABLE_INSTANCE_NAME));
     inOrder.verify(fetchTopicBuilder).execute();
 
     verifyNoMoreInteractions(fetchAndLockBuilder, fetchTopicBuilder, externalTaskService);
@@ -262,7 +263,7 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
   @Test
   void testFetchAndLockWithProcessDefinition() {
     // given
-    when(fetchTopicBuilder.execute()).thenReturn(List.of(lockedExternalTaskMock));
+    when(fetchTopicBuilder.execute()).thenReturn(Arrays.asList(lockedExternalTaskMock));
 
     // when
     Map<String, Object> parameters = new HashMap<>();
@@ -273,11 +274,11 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
     Map<String, Object> topicParameter = new HashMap<>();
     topicParameter.put("topicName", "aTopicName");
     topicParameter.put("processDefinitionId", EXAMPLE_PROCESS_DEFINITION_ID);
-    topicParameter.put("processDefinitionIdIn", List.of(EXAMPLE_PROCESS_DEFINITION_ID));
+    topicParameter.put("processDefinitionIdIn", Arrays.asList(EXAMPLE_PROCESS_DEFINITION_ID));
     topicParameter.put("processDefinitionKey", EXAMPLE_PROCESS_DEFINITION_KEY);
-    topicParameter.put("processDefinitionKeyIn", List.of(EXAMPLE_PROCESS_DEFINITION_KEY));
+    topicParameter.put("processDefinitionKeyIn", Arrays.asList(EXAMPLE_PROCESS_DEFINITION_KEY));
     topicParameter.put("lockDuration", 12354L);
-    parameters.put("topics", List.of(topicParameter));
+    parameters.put("topics", Arrays.asList(topicParameter));
 
     executePost(parameters);
 
@@ -303,7 +304,7 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
   @Test
   void testFetchAndLockWithVariableValue() {
     // given
-    when(fetchTopicBuilder.execute()).thenReturn(List.of(lockedExternalTaskMock));
+    when(fetchTopicBuilder.execute()).thenReturn(Arrays.asList(lockedExternalTaskMock));
 
     Map<String, Object> parameters = new HashMap<>();
     parameters.put("maxTasks", 5);
@@ -314,13 +315,13 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
     topicParameter.put("topicName", "aTopicName");
     topicParameter.put("businessKey", EXAMPLE_BUSINESS_KEY);
     topicParameter.put("lockDuration", 12354L);
-    topicParameter.put("variables", List.of(EXAMPLE_VARIABLE_INSTANCE_NAME));
+    topicParameter.put("variables", Arrays.asList(EXAMPLE_VARIABLE_INSTANCE_NAME));
 
     Map<String, Object> variableValueParameter = new HashMap<>();
     variableValueParameter.put(EXAMPLE_VARIABLE_INSTANCE_NAME, EXAMPLE_PRIMITIVE_VARIABLE_VALUE.getValue());
     topicParameter.put("processVariables", variableValueParameter);
 
-    parameters.put("topics", List.of(topicParameter));
+    parameters.put("topics", Arrays.asList(topicParameter));
 
     // when
     executePost(parameters);
@@ -336,7 +337,7 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
 
     inOrder.verify(fetchTopicBuilder).topic("aTopicName", 12354L);
     inOrder.verify(fetchTopicBuilder).businessKey(EXAMPLE_BUSINESS_KEY);
-    inOrder.verify(fetchTopicBuilder).variables(List.of(EXAMPLE_VARIABLE_INSTANCE_NAME));
+    inOrder.verify(fetchTopicBuilder).variables(Arrays.asList(EXAMPLE_VARIABLE_INSTANCE_NAME));
     inOrder.verify(fetchTopicBuilder).processInstanceVariableEquals(variableValueParameter);
     inOrder.verify(fetchTopicBuilder).execute();
 
@@ -346,7 +347,7 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
   @Test
   void testFetchAndLockWithCreateTimeDesc() {
     // given
-    when(fetchTopicBuilder.execute()).thenReturn(List.of(lockedExternalTaskMock));
+    when(fetchTopicBuilder.execute()).thenReturn(Arrays.asList(lockedExternalTaskMock));
 
     Map<String, Object> parameters = new HashMap<>();
     parameters.put("maxTasks", 5);
@@ -358,13 +359,13 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
     topicParameter.put("topicName", "aTopicName");
     topicParameter.put("businessKey", EXAMPLE_BUSINESS_KEY);
     topicParameter.put("lockDuration", 12354L);
-    topicParameter.put("variables", List.of(EXAMPLE_VARIABLE_INSTANCE_NAME));
+    topicParameter.put("variables", Arrays.asList(EXAMPLE_VARIABLE_INSTANCE_NAME));
 
     Map<String, Object> variableValueParameter = new HashMap<>();
     variableValueParameter.put(EXAMPLE_VARIABLE_INSTANCE_NAME, EXAMPLE_PRIMITIVE_VARIABLE_VALUE.getValue());
     topicParameter.put("processVariables", variableValueParameter);
 
-    parameters.put("topics", List.of(topicParameter));
+    parameters.put("topics", Arrays.asList(topicParameter));
 
     // when
     executePost(parameters);
@@ -384,7 +385,7 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
     inOrder.verify(fetchAndLockBuilder).subscribe();
     inOrder.verify(fetchTopicBuilder).topic("aTopicName", 12354L);
     inOrder.verify(fetchTopicBuilder).businessKey(EXAMPLE_BUSINESS_KEY);
-    inOrder.verify(fetchTopicBuilder).variables(List.of(EXAMPLE_VARIABLE_INSTANCE_NAME));
+    inOrder.verify(fetchTopicBuilder).variables(Arrays.asList(EXAMPLE_VARIABLE_INSTANCE_NAME));
     inOrder.verify(fetchTopicBuilder).processInstanceVariableEquals(variableValueParameter);
     inOrder.verify(fetchTopicBuilder).execute();
 
@@ -394,7 +395,7 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
   @Test
   void testFetchAndLockWithSortOrderInvalidCase() {
     // given
-    when(fetchTopicBuilder.execute()).thenReturn(List.of(lockedExternalTaskMock));
+    when(fetchTopicBuilder.execute()).thenReturn(Arrays.asList(lockedExternalTaskMock));
 
     Map<String, Object> parameters = new HashMap<>();
     parameters.put("maxTasks", 5);
@@ -406,13 +407,13 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
     topicParameter.put("topicName", "aTopicName");
     topicParameter.put("businessKey", EXAMPLE_BUSINESS_KEY);
     topicParameter.put("lockDuration", 12354L);
-    topicParameter.put("variables", List.of(EXAMPLE_VARIABLE_INSTANCE_NAME));
+    topicParameter.put("variables", Arrays.asList(EXAMPLE_VARIABLE_INSTANCE_NAME));
 
     Map<String, Object> variableValueParameter = new HashMap<>();
     variableValueParameter.put(EXAMPLE_VARIABLE_INSTANCE_NAME, EXAMPLE_PRIMITIVE_VARIABLE_VALUE.getValue());
     topicParameter.put("processVariables", variableValueParameter);
 
-    parameters.put("topics", List.of(topicParameter));
+    parameters.put("topics", Arrays.asList(topicParameter));
 
     // when
     given()
@@ -438,7 +439,7 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
   @Test
   void testFetchAndLockWithEmptySortOrder() {
     // given
-    when(fetchTopicBuilder.execute()).thenReturn(List.of(lockedExternalTaskMock));
+    when(fetchTopicBuilder.execute()).thenReturn(Arrays.asList(lockedExternalTaskMock));
 
     Map<String, Object> parameters = new HashMap<>();
     parameters.put("maxTasks", 5);
@@ -450,13 +451,13 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
     topicParameter.put("topicName", "aTopicName");
     topicParameter.put("businessKey", EXAMPLE_BUSINESS_KEY);
     topicParameter.put("lockDuration", 12354L);
-    topicParameter.put("variables", List.of(EXAMPLE_VARIABLE_INSTANCE_NAME));
+    topicParameter.put("variables", Arrays.asList(EXAMPLE_VARIABLE_INSTANCE_NAME));
 
     Map<String, Object> variableValueParameter = new HashMap<>();
     variableValueParameter.put(EXAMPLE_VARIABLE_INSTANCE_NAME, EXAMPLE_PRIMITIVE_VARIABLE_VALUE.getValue());
     topicParameter.put("processVariables", variableValueParameter);
 
-    parameters.put("topics", List.of(topicParameter));
+    parameters.put("topics", Arrays.asList(topicParameter));
 
     // when
     given()
@@ -482,7 +483,7 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
   @Test
   void testFetchAndLockWithBlankSortOrder() {
     // given
-    when(fetchTopicBuilder.execute()).thenReturn(List.of(lockedExternalTaskMock));
+    when(fetchTopicBuilder.execute()).thenReturn(Arrays.asList(lockedExternalTaskMock));
 
     String sortOrder = " ";
     Map<String, Object> parameters = new HashMap<>();
@@ -495,13 +496,13 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
     topicParameter.put("topicName", "aTopicName");
     topicParameter.put("businessKey", EXAMPLE_BUSINESS_KEY);
     topicParameter.put("lockDuration", 12354L);
-    topicParameter.put("variables", List.of(EXAMPLE_VARIABLE_INSTANCE_NAME));
+    topicParameter.put("variables", Arrays.asList(EXAMPLE_VARIABLE_INSTANCE_NAME));
 
     Map<String, Object> variableValueParameter = new HashMap<>();
     variableValueParameter.put(EXAMPLE_VARIABLE_INSTANCE_NAME, EXAMPLE_PRIMITIVE_VARIABLE_VALUE.getValue());
     topicParameter.put("processVariables", variableValueParameter);
 
-    parameters.put("topics", List.of(topicParameter));
+    parameters.put("topics", Arrays.asList(topicParameter));
 
     // when
     given()
@@ -527,7 +528,7 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
   @Test
   void testFetchAndLockWithCreateTimeWithoutOrder() {
     // given
-    when(fetchTopicBuilder.execute()).thenReturn(List.of(lockedExternalTaskMock));
+    when(fetchTopicBuilder.execute()).thenReturn(Arrays.asList(lockedExternalTaskMock));
 
     Map<String, Object> parameters = new HashMap<>();
     parameters.put("maxTasks", 5);
@@ -539,13 +540,13 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
     topicParameter.put("topicName", "aTopicName");
     topicParameter.put("businessKey", EXAMPLE_BUSINESS_KEY);
     topicParameter.put("lockDuration", 12354L);
-    topicParameter.put("variables", List.of(EXAMPLE_VARIABLE_INSTANCE_NAME));
+    topicParameter.put("variables", Arrays.asList(EXAMPLE_VARIABLE_INSTANCE_NAME));
 
     Map<String, Object> variableValueParameter = new HashMap<>();
     variableValueParameter.put(EXAMPLE_VARIABLE_INSTANCE_NAME, EXAMPLE_PRIMITIVE_VARIABLE_VALUE.getValue());
     topicParameter.put("processVariables", variableValueParameter);
 
-    parameters.put("topics", List.of(topicParameter));
+    parameters.put("topics", Arrays.asList(topicParameter));
 
     // when
     executePost(parameters);
@@ -565,7 +566,7 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
 
     inOrder.verify(fetchTopicBuilder).topic("aTopicName", 12354L);
     inOrder.verify(fetchTopicBuilder).businessKey(EXAMPLE_BUSINESS_KEY);
-    inOrder.verify(fetchTopicBuilder).variables(List.of(EXAMPLE_VARIABLE_INSTANCE_NAME));
+    inOrder.verify(fetchTopicBuilder).variables(Arrays.asList(EXAMPLE_VARIABLE_INSTANCE_NAME));
     inOrder.verify(fetchTopicBuilder).processInstanceVariableEquals(variableValueParameter);
     inOrder.verify(fetchTopicBuilder).execute();
 
@@ -575,7 +576,7 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
   @Test
   void testFetchAndLockWithCreateTimeWithInvalidOrder() {
     // given
-    when(fetchTopicBuilder.execute()).thenReturn(List.of(lockedExternalTaskMock));
+    when(fetchTopicBuilder.execute()).thenReturn(Arrays.asList(lockedExternalTaskMock));
 
     Map<String, Object> parameters = new HashMap<>();
     parameters.put("maxTasks", 5);
@@ -631,7 +632,7 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
   @Test
   void testFetchWithoutVariables() {
     // given
-    when(fetchTopicBuilder.execute()).thenReturn(List.of(lockedExternalTaskMock));
+    when(fetchTopicBuilder.execute()).thenReturn(Arrays.asList(lockedExternalTaskMock));
 
     // when
     Map<String, Object> parameters = new HashMap<>();
@@ -641,7 +642,7 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
     Map<String, Object> topicParameter = new HashMap<>();
     topicParameter.put("topicName", "aTopicName");
     topicParameter.put("lockDuration", 12354L);
-    parameters.put("topics", List.of(topicParameter));
+    parameters.put("topics", Arrays.asList(topicParameter));
 
     given()
       .contentType(POST_JSON_CONTENT_TYPE)
@@ -672,7 +673,7 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
   @Test
   void testFetchAndLockWithTenant() {
     // given
-    when(fetchTopicBuilder.execute()).thenReturn(List.of(lockedExternalTaskMock));
+    when(fetchTopicBuilder.execute()).thenReturn(Arrays.asList(lockedExternalTaskMock));
 
     // when
     Map<String, Object> parameters = new HashMap<>();
@@ -684,9 +685,9 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
     topicParameter.put("topicName", "aTopicName");
     topicParameter.put("withoutTenantId", true);
     topicParameter.put("tenantId", "tenant1");
-    topicParameter.put("tenantIdIn", List.of("tenant2"));
+    topicParameter.put("tenantIdIn", Arrays.asList("tenant2"));
     topicParameter.put("lockDuration", 12354L);
-    parameters.put("topics", List.of(topicParameter));
+    parameters.put("topics", Arrays.asList(topicParameter));
 
     executePost(parameters);
 
@@ -710,7 +711,7 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
   @Test
   void testFetchAndLockByProcessDefinitionVersionTag() {
     // given
-    when(fetchTopicBuilder.execute()).thenReturn(List.of(lockedExternalTaskMock));
+    when(fetchTopicBuilder.execute()).thenReturn(Arrays.asList(lockedExternalTaskMock));
 
     // when
     Map<String, Object> parameters = new HashMap<>();
@@ -721,7 +722,7 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
     topicParameter.put("topicName", "aTopicName");
     topicParameter.put("lockDuration", 12354L);
     topicParameter.put("processDefinitionVersionTag", "versionTag");
-    parameters.put("topics", List.of(topicParameter));
+    parameters.put("topics", Arrays.asList(topicParameter));
 
     executePost(parameters);
 
@@ -744,7 +745,7 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
   @Test
   void testFetchAndLockIncludeExtensionProperties() {
     // given
-    when(fetchTopicBuilder.execute()).thenReturn(List.of(lockedExternalTaskMock));
+    when(fetchTopicBuilder.execute()).thenReturn(Arrays.asList(lockedExternalTaskMock));
 
     // when
     Map<String, Object> parameters = new HashMap<>();
@@ -755,7 +756,7 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
     topicParameter.put("topicName", "aTopicName");
     topicParameter.put("lockDuration", 12354L);
     topicParameter.put("includeExtensionProperties", true);
-    parameters.put("topics", List.of(topicParameter));
+    parameters.put("topics", Arrays.asList(topicParameter));
 
     executePost(parameters);
 
@@ -778,7 +779,7 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
   @Test
   void testEnableCustomObjectDeserialization() {
     // given
-    when(fetchTopicBuilder.execute()).thenReturn(List.of(lockedExternalTaskMock));
+    when(fetchTopicBuilder.execute()).thenReturn(Arrays.asList(lockedExternalTaskMock));
 
     // when
     Map<String, Object> parameters = new HashMap<>();
@@ -788,9 +789,9 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
     Map<String, Object> topicParameter = new HashMap<>();
     topicParameter.put("topicName", "aTopicName");
     topicParameter.put("lockDuration", 12354L);
-    topicParameter.put("variables", List.of(EXAMPLE_VARIABLE_INSTANCE_NAME));
+    topicParameter.put("variables", Arrays.asList(EXAMPLE_VARIABLE_INSTANCE_NAME));
     topicParameter.put("deserializeValues", true);
-    parameters.put("topics", List.of(topicParameter));
+    parameters.put("topics", Arrays.asList(topicParameter));
 
     given()
       .contentType(POST_JSON_CONTENT_TYPE)
@@ -813,7 +814,7 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
 
     inOrder.verify(fetchTopicBuilder).topic("aTopicName", 12354L);
 
-    inOrder.verify(fetchTopicBuilder).variables(List.of(EXAMPLE_VARIABLE_INSTANCE_NAME));
+    inOrder.verify(fetchTopicBuilder).variables(Arrays.asList(EXAMPLE_VARIABLE_INSTANCE_NAME));
     inOrder.verify(fetchTopicBuilder).enableCustomObjectDeserialization();
     inOrder.verify(fetchTopicBuilder).execute();
 
@@ -823,7 +824,7 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
   @Test
   void testLocalVariables() {
     // given
-    when(fetchTopicBuilder.execute()).thenReturn(List.of(lockedExternalTaskMock));
+    when(fetchTopicBuilder.execute()).thenReturn(Arrays.asList(lockedExternalTaskMock));
 
     // when
     Map<String, Object> parameters = new HashMap<>();
@@ -833,9 +834,9 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
     Map<String, Object> topicParameter = new HashMap<>();
     topicParameter.put("topicName", "aTopicName");
     topicParameter.put("lockDuration", 12354L);
-    topicParameter.put("variables", List.of(EXAMPLE_VARIABLE_INSTANCE_NAME));
+    topicParameter.put("variables", Arrays.asList(EXAMPLE_VARIABLE_INSTANCE_NAME));
     topicParameter.put("localVariables", true);
-    parameters.put("topics", List.of(topicParameter));
+    parameters.put("topics", Arrays.asList(topicParameter));
 
     given()
       .contentType(POST_JSON_CONTENT_TYPE)
@@ -858,7 +859,7 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
     inOrder.verify(fetchAndLockBuilder).subscribe();
 
     inOrder.verify(topicBuilder).topic("aTopicName", 12354L);
-    inOrder.verify(topicBuilder).variables(List.of(EXAMPLE_VARIABLE_INSTANCE_NAME));
+    inOrder.verify(topicBuilder).variables(Arrays.asList(EXAMPLE_VARIABLE_INSTANCE_NAME));
     inOrder.verify(topicBuilder).localVariables();
 
     inOrder.verify(fetchTopicBuilder).execute();
@@ -1614,7 +1615,7 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
 
   @Test
   void testSetRetriesForExternalTasksAsync() {
-    List<String> externalTaskIds = List.of("externalTaskId1", "externalTaskId2");
+    List<String> externalTaskIds = Arrays.asList("externalTaskId1", "externalTaskId2");
     Map<String, Object> parameters = new HashMap<>();
     parameters.put("retries", "5");
     parameters.put("externalTaskIds", externalTaskIds);
@@ -1642,7 +1643,7 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
 
   @Test
   void testSetRetriesForExternalTasksSync() {
-    List<String> externalTaskIds = List.of("externalTaskId1", "externalTaskId2");
+    List<String> externalTaskIds = Arrays.asList("externalTaskId1", "externalTaskId2");
     Map<String, Object> parameters = new HashMap<>();
     parameters.put("retries", "5");
     parameters.put("externalTaskIds", externalTaskIds);
@@ -1670,7 +1671,7 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
 
   @Test
   void testSetRetriesForExternalTasksAsyncByProcessInstanceIds() {
-    List<String> processInstanceIds = List.of("123", "456");
+    List<String> processInstanceIds = Arrays.asList("123", "456");
     Map<String, Object> parameters = new HashMap<>();
     parameters.put("retries", "5");
     parameters.put("processInstanceIds", processInstanceIds);
@@ -1698,7 +1699,7 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
 
   @Test
   void testSetRetriesForExternalTasksSyncByProcessInstanceIds() {
-    List<String> processInstanceIds = List.of("123", "456");
+    List<String> processInstanceIds = Arrays.asList("123", "456");
     Map<String, Object> parameters = new HashMap<>();
     parameters.put("retries", "5");
     parameters.put("processInstanceIds", processInstanceIds);
