@@ -17,6 +17,7 @@
 package org.operaton.bpm.engine.rest.history;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Date;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -1291,7 +1292,7 @@ public class HistoricCaseInstanceRestServiceQueryTest extends AbstractRestServic
 
   @Test
   void testWithoutTenantIdParameter() {
-    mockedQuery = setUpMockHistoricCaseInstanceQuery(List.of(MockProvider.createMockHistoricCaseInstance(null)));
+    mockedQuery = setUpMockHistoricCaseInstanceQuery(Arrays.asList(MockProvider.createMockHistoricCaseInstance(null)));
 
     Response response = given()
       .queryParam("withoutTenantId", true)
@@ -1313,7 +1314,7 @@ public class HistoricCaseInstanceRestServiceQueryTest extends AbstractRestServic
 
   @Test
   void testWithoutTenantIdPostParameter() {
-    mockedQuery = setUpMockHistoricCaseInstanceQuery(List.of(MockProvider.createMockHistoricCaseInstance(null)));
+    mockedQuery = setUpMockHistoricCaseInstanceQuery(Arrays.asList(MockProvider.createMockHistoricCaseInstance(null)));
 
     Map<String, Object> queryParameters = new HashMap<>();
     queryParameters.put("withoutTenantId", true);
@@ -1338,7 +1339,7 @@ public class HistoricCaseInstanceRestServiceQueryTest extends AbstractRestServic
   }
 
   private List<HistoricCaseInstance> createMockHistoricCaseInstancesTwoTenants() {
-    return List.of(
+    return Arrays.asList(
         MockProvider.createMockHistoricCaseInstance(MockProvider.EXAMPLE_TENANT_ID),
         MockProvider.createMockHistoricCaseInstance(MockProvider.ANOTHER_EXAMPLE_TENANT_ID));
   }
