@@ -16,6 +16,7 @@
  */
 package org.operaton.bpm.engine.impl.batch;
 
+import java.util.Arrays;
 import java.util.List;
 
 import org.junit.jupiter.api.Test;
@@ -30,7 +31,7 @@ class BatchElementConfigurationTest {
   void shouldProduceListOfIdsSortedByKey() {
     // given
     BatchElementConfiguration configuration = new BatchElementConfiguration();
-    configuration.addDeploymentMappings(List.of(
+    configuration.addDeploymentMappings(Arrays.asList(
         new ImmutablePair<>("ABC", "foo"), new ImmutablePair<>("ABC", "bar"), new ImmutablePair<>("AAB", "baz")));
     // when
     List<String> ids = configuration.getIds();
@@ -43,7 +44,7 @@ class BatchElementConfigurationTest {
   void shouldProduceListOfMappingsSortedByKey() {
     // given
     BatchElementConfiguration configuration = new BatchElementConfiguration();
-    configuration.addDeploymentMappings(List.of(
+    configuration.addDeploymentMappings(Arrays.asList(
         new ImmutablePair<>("ABC", "foo"), new ImmutablePair<>("ABC", "bar"), new ImmutablePair<>("AAB", "baz")));
     // when
     DeploymentMappings mappings = configuration.getMappings();
@@ -55,7 +56,7 @@ class BatchElementConfigurationTest {
   void shouldIncludeNullMappings() {
     // given
     BatchElementConfiguration configuration = new BatchElementConfiguration();
-    configuration.addDeploymentMappings(List.of(
+    configuration.addDeploymentMappings(Arrays.asList(
         new ImmutablePair<>("ABC", "foo"), new ImmutablePair<>("AAB", "baz"), new ImmutablePair<>(null, "null")));
     // when
     List<String> ids = configuration.getIds();
@@ -69,12 +70,12 @@ class BatchElementConfigurationTest {
   void shouldRecalculateMappingsWhenNewElementsAdded() {
     // given
     BatchElementConfiguration configuration = new BatchElementConfiguration();
-    configuration.addDeploymentMappings(List.of(
+    configuration.addDeploymentMappings(Arrays.asList(
         new ImmutablePair<>("ABC", "foo"), new ImmutablePair<>("AAB", "baz")));
     configuration.getIds();
     configuration.getMappings();
     // when
-    configuration.addDeploymentMappings(List.of(
+    configuration.addDeploymentMappings(Arrays.asList(
         new ImmutablePair<>("AAB", "bar")));
     List<String> ids = configuration.getIds();
     DeploymentMappings mappings = configuration.getMappings();
@@ -89,8 +90,8 @@ class BatchElementConfigurationTest {
     // given
     BatchElementConfiguration configuration = new BatchElementConfiguration();
     configuration.addDeploymentMappings(
-        List.of(new ImmutablePair<>("ABC", "foo"), new ImmutablePair<>("AAB", "baz")),
-        List.of("null"));
+        Arrays.asList(new ImmutablePair<>("ABC", "foo"), new ImmutablePair<>("AAB", "baz")),
+        Arrays.asList("null"));
     // when
     List<String> ids = configuration.getIds();
     DeploymentMappings mappings = configuration.getMappings();
@@ -104,8 +105,8 @@ class BatchElementConfigurationTest {
     // given
     BatchElementConfiguration configuration = new BatchElementConfiguration();
     configuration.addDeploymentMappings(
-        List.of(new ImmutablePair<>("ABC", "foo"), new ImmutablePair<>("AAB", "baz"), new ImmutablePair<>(null, "null")),
-        List.of("bar"));
+        Arrays.asList(new ImmutablePair<>("ABC", "foo"), new ImmutablePair<>("AAB", "baz"), new ImmutablePair<>(null, "null")),
+        Arrays.asList("bar"));
     // when
     List<String> ids = configuration.getIds();
     DeploymentMappings mappings = configuration.getMappings();
