@@ -17,6 +17,7 @@
 package org.operaton.bpm.engine.test.api.runtime.migration.batch;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.Date;
@@ -98,7 +99,7 @@ public class BatchMigrationTest {
 
   @Parameters(name = "Job DueDate is set: {0}")
   public static Collection<Object[]> scenarios() {
-    return List.of(new Object[][] {
+    return Arrays.asList(new Object[][] {
       { false, null },
       { true, TEST_DATE }
     });
@@ -164,7 +165,7 @@ public class BatchMigrationTest {
     MigrationPlan migrationPlan = runtimeService.createMigrationPlan(testProcessDefinition.getId(), testProcessDefinition.getId())
       .mapEqualActivities()
       .build();
-    var migrationPlanExecutionBuilder = runtimeService.newMigration(migrationPlan).processInstanceIds(List.of("foo", null, "bar"));
+    var migrationPlanExecutionBuilder = runtimeService.newMigration(migrationPlan).processInstanceIds(Arrays.asList("foo", null, "bar"));
 
     try {
       migrationPlanExecutionBuilder.executeAsync();
@@ -706,7 +707,7 @@ public class BatchMigrationTest {
     ProcessInstance processInstance = engineRule.getRuntimeService().startProcessInstanceById(sourceProcessDefinition.getId());
 
     Batch batch = engineRule.getRuntimeService().newMigration(migrationPlan)
-      .processInstanceIds(List.of(processInstance.getId()))
+      .processInstanceIds(Arrays.asList(processInstance.getId()))
       .executeAsync();
     helper.completeSeedJobs(batch);
 
@@ -744,7 +745,7 @@ public class BatchMigrationTest {
     ProcessInstance processInstance = engineRule.getRuntimeService().startProcessInstanceById(sourceProcessDefinition.getId());
 
     Batch batch = engineRule.getRuntimeService().newMigration(migrationPlan)
-      .processInstanceIds(List.of(processInstance.getId()))
+      .processInstanceIds(Arrays.asList(processInstance.getId()))
       .skipCustomListeners()
       .executeAsync();
     helper.completeSeedJobs(batch);
@@ -774,7 +775,7 @@ public class BatchMigrationTest {
     ProcessInstance processInstance = engineRule.getRuntimeService().startProcessInstanceById(sourceProcessDefinition.getId());
 
     Batch batch = engineRule.getRuntimeService().newMigration(migrationPlan)
-      .processInstanceIds(List.of(processInstance.getId()))
+      .processInstanceIds(Arrays.asList(processInstance.getId()))
       .executeAsync();
     helper.completeSeedJobs(batch);
 
@@ -809,7 +810,7 @@ public class BatchMigrationTest {
     ProcessInstance processInstance = engineRule.getRuntimeService().startProcessInstanceById(sourceProcessDefinition.getId());
 
     Batch batch = engineRule.getRuntimeService().newMigration(migrationPlan)
-      .processInstanceIds(List.of(processInstance.getId()))
+      .processInstanceIds(Arrays.asList(processInstance.getId()))
       .skipIoMappings()
       .executeAsync();
     helper.completeSeedJobs(batch);
