@@ -16,6 +16,7 @@
  */
 package org.operaton.bpm.engine.test.history;
 
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.Date;
 import java.util.HashSet;
@@ -383,7 +384,7 @@ class HistoricCaseInstanceTest extends CmmnTest {
 
     // sort by case instance ids
     @SuppressWarnings("rawtypes")
-    List<? extends Comparable> sortedList = List.of(oneCaseInstance.getId(), twoCaseInstance.getId());
+    List<? extends Comparable> sortedList = Arrays.asList(oneCaseInstance.getId(), twoCaseInstance.getId());
     Collections.sort(sortedList);
 
     List<HistoricCaseInstance> instances = historicQuery().orderByCaseInstanceId().asc().list();
@@ -395,7 +396,7 @@ class HistoricCaseInstanceTest extends CmmnTest {
     assertThat(instances).extracting("id").containsExactly(sortedList.get(1), sortedList.get(0));
 
     // sort by case definition ids
-    sortedList = List.of(oneCaseInstance.getCaseDefinitionId(), twoCaseInstance.getCaseDefinitionId());
+    sortedList = Arrays.asList(oneCaseInstance.getCaseDefinitionId(), twoCaseInstance.getCaseDefinitionId());
     Collections.sort(sortedList);
 
     instances = historicQuery().orderByCaseDefinitionId().asc().list();
@@ -407,7 +408,7 @@ class HistoricCaseInstanceTest extends CmmnTest {
     assertThat(instances).extracting("caseDefinitionId").containsExactly(sortedList.get(1), sortedList.get(0));
 
     // sort by business keys
-    sortedList = List.of(oneCaseInstance.getBusinessKey(), twoCaseInstance.getBusinessKey());
+    sortedList = Arrays.asList(oneCaseInstance.getBusinessKey(), twoCaseInstance.getBusinessKey());
     Collections.sort(sortedList);
 
     instances = historicQuery().orderByCaseInstanceBusinessKey().asc().list();
@@ -419,7 +420,7 @@ class HistoricCaseInstanceTest extends CmmnTest {
     assertThat(instances).extracting("businessKey").containsExactly(sortedList.get(1), sortedList.get(0));
 
     // sort by create time
-    sortedList = List.of(oneCaseInstance.getCreateTime(), twoCaseInstance.getCreateTime());
+    sortedList = Arrays.asList(oneCaseInstance.getCreateTime(), twoCaseInstance.getCreateTime());
     Collections.sort(sortedList);
 
     instances = historicQuery().orderByCaseInstanceCreateTime().asc().list();
@@ -431,7 +432,7 @@ class HistoricCaseInstanceTest extends CmmnTest {
     assertThat(instances).extracting("createTime").containsExactly(sortedList.get(1), sortedList.get(0));
 
     // sort by close time
-    sortedList = List.of(oneCaseInstance.getCloseTime(), twoCaseInstance.getCloseTime());
+    sortedList = Arrays.asList(oneCaseInstance.getCloseTime(), twoCaseInstance.getCloseTime());
     Collections.sort(sortedList);
 
     instances = historicQuery().orderByCaseInstanceCloseTime().asc().list();
@@ -443,7 +444,7 @@ class HistoricCaseInstanceTest extends CmmnTest {
     assertThat(instances).extracting("closeTime").containsExactly(sortedList.get(1), sortedList.get(0));
 
     // sort by duration
-    sortedList = List.of(oneCaseInstance.getDurationInMillis(), twoCaseInstance.getDurationInMillis());
+    sortedList = Arrays.asList(oneCaseInstance.getDurationInMillis(), twoCaseInstance.getDurationInMillis());
     Collections.sort(sortedList);
 
     instances = historicQuery().orderByCaseInstanceDuration().asc().list();
